--- a/static/confirm_delete_chat.html
+++ b/static/confirm_delete_chat.html
@@ -1,31 +1,221 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head><meta charset="UTF-8"><title>Удалить чат</title></head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Удалить чат</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <style>
+        :root {
+            --primary: #6366f1;
+            --primary-hover: #4f46e5;
+            --danger: #ef4444;
+            --danger-hover: #dc2626;
+            --text: #1f2937;
+            --light-text: #6b7280;
+            --bg: #f9fafb;
+            --card: #ffffff;
+            --border: #e5e7eb;
+            --shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.05);
+        }
+
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+            font-family: 'Segoe UI', system-ui, sans-serif;
+        }
+
+        body {
+            min-height: 100vh;
+            background: linear-gradient(135deg, #f0f9ff 0%, #e6f7ff 100%);
+            color: var(--text);
+            line-height: 1.6;
+            padding: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .container {
+            max-width: 500px;
+            width: 100%;
+            margin: 0 auto;
+        }
+
+        .confirmation-card {
+            background: var(--card);
+            border-radius: 16px;
+            box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.1);
+            padding: 40px 30px;
+            text-align: center;
+            animation: fadeIn 0.4s ease-out;
+        }
+
+        .warning-icon {
+            font-size: 64px;
+            color: var(--danger);
+            margin-bottom: 20px;
+            animation: pulse 1.5s infinite;
+        }
+
+        .confirmation-title {
+            font-size: 28px;
+            font-weight: 700;
+            color: var(--text);
+            margin-bottom: 15px;
+        }
+
+        .confirmation-text {
+            font-size: 18px;
+            color: var(--light-text);
+            margin-bottom: 30px;
+            line-height: 1.7;
+        }
+
+        .buttons-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
+            flex-wrap: wrap;
+        }
+
+        .btn {
+            padding: 12px 30px;
+            border-radius: 10px;
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            cursor: pointer;
+            transition: all 0.2s;
+            border: none;
+            box-shadow: var(--shadow);
+            font-size: 16px;
+        }
+
+        .btn-danger {
+            background: var(--danger);
+            color: white;
+        }
+
+        .btn-danger:hover {
+            background: var(--danger-hover);
+            transform: translateY(-2px);
+            box-shadow: 0 6px 12px -2px rgba(239, 68, 68, 0.3);
+        }
+
+        .btn-outline {
+            background: transparent;
+            border: 2px solid var(--border);
+            color: var(--text);
+        }
+
+        .btn-outline:hover {
+            background: #f3f4f6;
+            transform: translateY(-2px);
+        }
+
+        /* Animations */
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+            100% { transform: scale(1); }
+        }
+
+        /* Responsive */
+        @media (max-width: 480px) {
+            .confirmation-card {
+                padding: 30px 20px;
+            }
+
+            .confirmation-title {
+                font-size: 24px;
+            }
+
+            .confirmation-text {
+                font-size: 16px;
+            }
+
+            .buttons-container {
+                flex-direction: column;
+                gap: 12px;
+            }
+
+            .btn {
+                width: 100%;
+                justify-content: center;
+            }
+        }
+    </style>
+</head>
 <body>
-<h1>Удалить чат?</h1>
-<button id="yesBtn">ДА</button>
-<button id="noBtn">НЕТ</button>
+<div class="container">
+    <div class="confirmation-card">
+        <div class="warning-icon">
+            <i class="fas fa-exclamation-triangle"></i>
+        </div>
+
+        <h1 class="confirmation-title">Удалить чат?</h1>
+
+        <p class="confirmation-text">
+            Вы уверены, что хотите удалить этот чат? Это действие нельзя отменить,
+            и все сообщения в чате будут безвозвратно удалены.
+        </p>
+
+        <div class="buttons-container">
+            <button class="btn btn-danger" id="yesBtn">
+                <i class="fas fa-trash-alt"></i> ДА, удалить
+            </button>
+            <button class="btn btn-outline" id="noBtn">
+                <i class="fas fa-times"></i> НЕТ, отменить
+            </button>
+        </div>
+    </div>
+</div>
 
 <script>
-  const token = localStorage.getItem('token');
-  if (!token) window.location.href = '/login.html';
+    const token = localStorage.getItem('token');
+    if (!token) window.location.href = '/login.html';
 
-  const chatId = localStorage.getItem('chatToDelete');
-  if (!chatId) window.location.href = '/contacts.html';
+    const chatId = localStorage.getItem('chatToDelete');
+    if (!chatId) window.location.href = '/contacts.html';
 
-  document.getElementById('yesBtn').onclick = async () => {
-    await fetch('/api/chats/' + chatId, {
-      method: 'DELETE',
-      headers: { 'Authorization': 'Bearer ' + token }
-    });
-    localStorage.removeItem('chatToDelete');
-    window.location.href = '/contacts.html';
-  };
+    document.getElementById('yesBtn').onclick = async () => {
+        // Добавляем анимацию загрузки
+        const yesBtn = document.getElementById('yesBtn');
+        yesBtn.innerHTML = '<i class="fas fa-spinner fa-spin"></i> Удаление...';
+        yesBtn.disabled = true;
 
-  document.getElementById('noBtn').onclick = () => {
-    localStorage.removeItem('chatToDelete');
-    window.location.href = '/contacts.html';
-  };
+        try {
+            const response = await fetch('/api/chats/' + chatId, {
+                method: 'DELETE',
+                headers: { 'Authorization': 'Bearer ' + token }
+            });
+
+            if (!response.ok) {
+                throw new Error('Не удалось удалить чат');
+            }
+
+            localStorage.removeItem('chatToDelete');
+            window.location.href = '/contacts.html';
+        } catch (error) {
+            alert('Ошибка при удалении чата: ' + error.message);
+            yesBtn.innerHTML = '<i class="fas fa-trash-alt"></i> ДА, удалить';
+            yesBtn.disabled = false;
+        }
+    };
+
+    document.getElementById('noBtn').onclick = () => {
+        localStorage.removeItem('chatToDelete');
+        window.location.href = '/contacts.html';
+    };
 </script>
 </body>
 </html>
