--- a/static/contacts.html
+++ b/static/contacts.html
@@ -2,17 +2,365 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Список контактов</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Мои контакты</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <style>
+        :root {
+            --primary: #6366f1;
+            --primary-hover: #4f46e5;
+            --danger: #ef4444;
+            --danger-hover: #dc2626;
+            --success: #10b981;
+            --warning: #f59e0b;
+            --text: #1f2937;
+            --light-text: #6b7280;
+            --bg: #f9fafb;
+            --card: #ffffff;
+            --border: #e5e7eb;
+            --shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.05);
+        }
+
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+            font-family: 'Segoe UI', system-ui, sans-serif;
+        }
+
+        body {
+            min-height: 100vh;
+            background: linear-gradient(135deg, #f0f9ff 0%, #e6f7ff 100%);
+            color: var(--text);
+            line-height: 1.6;
+            padding: 20px;
+        }
+
+        .container {
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+
+        /* Header Styles */
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px 0;
+            margin-bottom: 30px;
+            border-bottom: 1px solid var(--border);
+        }
+
+        .user-info {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+        }
+
+        .avatar {
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            background: linear-gradient(135deg, var(--primary), #8b5cf6);
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 24px;
+            font-weight: bold;
+            box-shadow: var(--shadow);
+        }
+
+        .username {
+            font-size: 28px;
+            font-weight: 700;
+            color: var(--text);
+        }
+
+        .action-buttons {
+            display: flex;
+            gap: 12px;
+            flex-wrap: wrap;
+        }
+
+        .btn {
+            padding: 10px 20px;
+            border-radius: 10px;
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            cursor: pointer;
+            transition: all 0.2s;
+            border: none;
+            box-shadow: var(--shadow);
+        }
+
+        .btn-primary {
+            background: var(--primary);
+            color: white;
+        }
+
+        .btn-primary:hover {
+            background: var(--primary-hover);
+            transform: translateY(-2px);
+        }
+
+        .btn-danger {
+            background: var(--danger);
+            color: white;
+        }
+
+        .btn-danger:hover {
+            background: var(--danger-hover);
+            transform: translateY(-2px);
+        }
+
+        .btn-warning {
+            background: var(--warning);
+            color: white;
+        }
+
+        .btn-warning:hover {
+            background: #e69008;
+            transform: translateY(-2px);
+        }
+
+        .btn-outline {
+            background: transparent;
+            border: 2px solid var(--border);
+            color: var(--text);
+        }
+
+        .btn-outline:hover {
+            background: #f3f4f6;
+        }
+
+        /* Chats Section */
+        .chats-container {
+            background: var(--card);
+            border-radius: 16px;
+            box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+            margin-bottom: 30px;
+        }
+
+        .section-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 25px;
+        }
+
+        .section-title {
+            font-size: 24px;
+            font-weight: 700;
+            color: var(--text);
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .create-chat-btn {
+            padding: 10px 20px;
+            background: var(--success);
+            color: white;
+            border-radius: 10px;
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            cursor: pointer;
+            transition: all 0.2s;
+            border: none;
+            box-shadow: var(--shadow);
+        }
+
+        .create-chat-btn:hover {
+            background: #0da271;
+            transform: translateY(-2px);
+        }
+
+        .chats-list {
+            list-style: none;
+        }
+
+        .chat-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px;
+            border-radius: 12px;
+            margin-bottom: 15px;
+            transition: all 0.2s;
+            background: #f9fafb;
+            border: 1px solid var(--border);
+        }
+
+        .chat-item:hover {
+            background: #f3f4f6;
+            transform: translateY(-2px);
+            box-shadow: var(--shadow);
+        }
+
+        .chat-info {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+        }
+
+        .chat-icon {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background: linear-gradient(135deg, var(--primary), #8b5cf6);
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 20px;
+        }
+
+        .chat-name {
+            font-size: 18px;
+            font-weight: 600;
+        }
+
+        .chat-actions {
+            display: flex;
+            gap: 10px;
+        }
+
+        .action-btn {
+            padding: 8px 16px;
+            border-radius: 8px;
+            font-weight: 500;
+            display: flex;
+            align-items: center;
+            gap: 6px;
+            cursor: pointer;
+            transition: all 0.2s;
+            border: none;
+        }
+
+        .go-btn {
+            background: var(--primary);
+            color: white;
+        }
+
+        .go-btn:hover {
+            background: var(--primary-hover);
+        }
+
+        .delete-btn {
+            background: #fee2e2;
+            color: var(--danger);
+        }
+
+        .delete-btn:hover {
+            background: #fecaca;
+        }
+
+        /* Empty State */
+        .empty-state {
+            text-align: center;
+            padding: 40px;
+            color: var(--light-text);
+        }
+
+        .empty-icon {
+            font-size: 64px;
+            margin-bottom: 20px;
+            color: #d1d5db;
+        }
+
+        .empty-text {
+            font-size: 18px;
+            margin-bottom: 20px;
+        }
+
+        /* Responsive */
+        @media (max-width: 768px) {
+            .header {
+                flex-direction: column;
+                gap: 20px;
+                align-items: flex-start;
+            }
+
+            .action-buttons {
+                width: 100%;
+                justify-content: center;
+            }
+
+            .chat-item {
+                flex-direction: column;
+                gap: 15px;
+                align-items: flex-start;
+            }
+
+            .chat-actions {
+                width: 100%;
+                justify-content: flex-end;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .btn, .create-chat-btn {
+                padding: 8px 12px;
+                font-size: 14px;
+            }
+
+            .username {
+                font-size: 24px;
+            }
+
+            .action-buttons {
+                gap: 8px;
+            }
+        }
+    </style>
 </head>
 <body>
-<h1 id="username">Имя пользователя</h1>
-<button id="editLoginBtn">Изменить имя</button>
-<button id="createChatBtn">Создать чат</button>
-<button id="logoutBtn">Выход</button>
-<button id="deleteAccountBtn">Удалить аккаунт</button>
+<div class="container">
+    <!-- Header with user info and actions -->
+    <div class="header">
+        <div class="user-info">
+            <div class="avatar" id="userAvatar">U</div>
+            <h1 class="username" id="username">Имя пользователя</h1>
+        </div>
 
-<h2>Чаты</h2>
-<ul id="chatList"></ul>
+        <div class="action-buttons">
+            <button class="btn btn-outline" id="editLoginBtn">
+                <i class="fas fa-user-edit"></i> Изменить имя
+            </button>
+            <button class="btn btn-primary" id="createChatBtn">
+                <i class="fas fa-plus"></i> Создать чат
+            </button>
+            <button class="btn btn-warning" id="logoutBtn">
+                <i class="fas fa-sign-out-alt"></i> Выход
+            </button>
+            <button class="btn btn-danger" id="deleteAccountBtn">
+                <i class="fas fa-trash-alt"></i> Удалить аккаунт
+            </button>
+        </div>
+    </div>
+
+    <!-- Chats section -->
+    <div class="chats-container">
+        <div class="section-header">
+            <h2 class="section-title">
+                <i class="fas fa-comments"></i> Ваши чаты
+            </h2>
+            <button class="create-chat-btn" id="createChatBtn2">
+                <i class="fas fa-plus-circle"></i> Новый чат
+            </button>
+        </div>
+
+        <ul class="chats-list" id="chatList">
+            <!-- Chat items will be added here by JavaScript -->
+        </ul>
+    </div>
+</div>
 
 <script>
     const token = localStorage.getItem('token');
@@ -29,32 +377,80 @@
             const user = await res.json();
             document.getElementById('username').textContent = user.login;
 
-            // Отображаем чаты
+            // Set avatar initial
+            const avatar = document.getElementById('userAvatar');
+            if (user.login) {
+                avatar.textContent = user.login.charAt(0).toUpperCase();
+            }
+
+            // Display chats
             const list = document.getElementById('chatList');
             list.innerHTML = '';
 
-            user.chats.forEach(chat => {
-                const li = document.createElement('li');
-                li.textContent = chat.name + ' ';
+            if (user.chats && user.chats.length > 0) {
+                user.chats.forEach(chat => {
+                    const li = document.createElement('li');
+                    li.className = 'chat-item';
 
-                const delBtn = document.createElement('button');
-                delBtn.textContent = 'Удалить';
-                delBtn.onclick = () => {
-                    localStorage.setItem('chatToDelete', chat.id);
-                    window.location.href = '/confirm_delete_chat.html';
+                    li.innerHTML = `
+                            <div class="chat-info">
+                                <div class="chat-icon">${chat.name ? chat.name.charAt(0).toUpperCase() : 'C'}</div>
+                                <div class="chat-name">${chat.name || 'Без названия'}</div>
+                            </div>
+                            <div class="chat-actions">
+                                <button class="action-btn go-btn go-chat-btn">
+                                    <i class="fas fa-comment-dots"></i> Перейти
+                                </button>
+                                <button class="action-btn delete-btn delete-chat-btn">
+                                    <i class="fas fa-trash"></i> Удалить
+                                </button>
+                            </div>
+                        `;
+
+                    // Add event to go button
+                    const goBtn = li.querySelector('.go-chat-btn');
+                    goBtn.onclick = () => {
+                        window.location.href = `/chat.html?chat_id=${chat.id}`;
+                    };
+
+                    // Add event to delete button
+                    const delBtn = li.querySelector('.delete-chat-btn');
+                    delBtn.onclick = () => {
+                        localStorage.setItem('chatToDelete', chat.id);
+                        window.location.href = '/confirm_delete_chat.html';
+                    };
+
+                    list.appendChild(li);
+                });
+            } else {
+                // Show empty state
+                list.innerHTML = `
+                        <div class="empty-state">
+                            <div class="empty-icon">
+                                <i class="far fa-comments"></i>
+                            </div>
+                            <p class="empty-text">У вас пока нет чатов</p>
+                            <button class="create-chat-btn" id="createChatBtn3">
+                                <i class="fas fa-plus-circle"></i> Создать первый чат
+                            </button>
+                        </div>
+                    `;
+
+                document.getElementById('createChatBtn3').onclick = () => {
+                    window.location.href = '/create_chat.html';
                 };
-
-                li.appendChild(delBtn);
-                list.appendChild(li);
-            });
+            }
         } else {
             localStorage.removeItem('token');
             window.location.href = '/login.html';
         }
     }
 
+    // Button event handlers
     document.getElementById('editLoginBtn').onclick = () => window.location.href = '/edit_login.html';
     document.getElementById('createChatBtn').onclick = () => window.location.href = '/create_chat.html';
+    document.getElementById('createChatBtn2').onclick = () => window.location.href = '/create_chat.html';
+
     document.getElementById('logoutBtn').onclick = async () => {
         await fetch('/api/logout', {
             method: 'POST',
@@ -63,8 +459,10 @@
         localStorage.removeItem('token');
         window.location.href = '/login.html';
     };
+
     document.getElementById('deleteAccountBtn').onclick = () => window.location.href = '/confirm_delete_account.html';
 
+    // Load user data on page load
     loadUser();
 </script>
 </body>
