--- a/static/create_chat.html
+++ b/static/create_chat.html
@@ -1,13 +1,323 @@
 <!DOCTYPE html>
-<html lang="ru">
-<head><meta charset="UTF-8"><title>Создать чат</title></head>
+<html lang="ru" class="h-full">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Создать новый чат</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <style>
+    :root {
+      --primary: #7e3af2;
+      --primary-hover: #6c2bd9;
+      --error: #e02424;
+      --success: #0e9f6e;
+      --text: #1f2937;
+      --bg: #f9fafb;
+      --card: #ffffff;
+      --border: #e5e7eb;
+      --accent: #ff5a1f;
+    }
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', system-ui, sans-serif;
+    }
+
+    body {
+      min-height: 100vh;
+      background: linear-gradient(135deg, #f0f9ff 0%, #f5edff 100%);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+      color: var(--text);
+      line-height: 1.5;
+    }
+
+    .container {
+      width: 100%;
+      max-width: 480px;
+    }
+
+    .card {
+      background: var(--card);
+      border-radius: 20px;
+      box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+      padding: 40px;
+      transition: all 0.3s ease;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .card::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 6px;
+      background: linear-gradient(90deg, var(--primary), var(--accent));
+    }
+
+    .header {
+      text-align: center;
+      margin-bottom: 30px;
+      position: relative;
+    }
+
+    .back-btn {
+      position: absolute;
+      left: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      background: none;
+      border: none;
+      color: var(--primary);
+      font-size: 16px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      padding: 8px;
+      transition: all 0.2s;
+      border-radius: 8px;
+    }
+
+    .back-btn:hover {
+      background-color: #f5f3ff;
+    }
+
+    .back-btn svg {
+      margin-right: 6px;
+    }
+
+    .logo-icon {
+      display: inline-flex;
+      background: linear-gradient(135deg, var(--primary), var(--accent));
+      color: white;
+      width: 70px;
+      height: 70px;
+      border-radius: 50%;
+      align-items: center;
+      justify-content: center;
+      font-size: 32px;
+      margin-bottom: 20px;
+      box-shadow: 0 10px 15px -3px rgba(126, 58, 242, 0.3);
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 28px;
+      font-weight: 700;
+      margin-bottom: 8px;
+      color: #111827;
+      background: linear-gradient(90deg, var(--primary), var(--accent));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    .subtitle {
+      text-align: center;
+      color: #6b7280;
+      margin-bottom: 30px;
+      font-size: 17px;
+      max-width: 320px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .form-group {
+      margin-bottom: 24px;
+      position: relative;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 10px;
+      font-weight: 500;
+      color: #374151;
+      font-size: 16px;
+      display: flex;
+      align-items: center;
+    }
+
+    label i {
+      margin-right: 8px;
+      color: var(--primary);
+    }
+
+    input {
+      width: 100%;
+      padding: 16px 20px;
+      border: 2px solid var(--border);
+      border-radius: 12px;
+      font-size: 16px;
+      transition: all 0.2s;
+      background-color: #f9fafb;
+    }
+
+    input:focus {
+      outline: none;
+      border-color: var(--primary);
+      box-shadow: 0 0 0 4px rgba(126, 58, 242, 0.15);
+      background-color: white;
+    }
+
+    input::placeholder {
+      color: #9ca3af;
+    }
+
+    button[type="submit"] {
+      width: 100%;
+      padding: 16px;
+      background: linear-gradient(135deg, var(--primary), var(--accent));
+      color: white;
+      border: none;
+      border-radius: 12px;
+      font-size: 17px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.3s;
+      margin-top: 8px;
+      box-shadow: 0 6px 12px -2px rgba(126, 58, 242, 0.4);
+      position: relative;
+      overflow: hidden;
+    }
+
+    button[type="submit"]::after {
+      content: '';
+      position: absolute;
+      top: -50%;
+      left: -60%;
+      width: 20px;
+      height: 200%;
+      background: rgba(255, 255, 255, 0.2);
+      transform: rotate(30deg);
+      transition: all 0.8s;
+    }
+
+    button[type="submit"]:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 10px 20px -3px rgba(126, 58, 242, 0.5);
+    }
+
+    button[type="submit"]:hover::after {
+      left: 140%;
+    }
+
+    button[type="submit"]:active {
+      transform: translateY(0);
+    }
+
+    #result {
+      min-height: 24px;
+      text-align: center;
+      margin-top: 20px;
+      font-weight: 500;
+      padding: 16px;
+      border-radius: 12px;
+      transition: all 0.3s;
+      font-size: 16px;
+    }
+
+    .error {
+      background-color: #fde8e8;
+      color: var(--error);
+      border: 1px solid #f8b4b4;
+    }
+
+    .success {
+      background-color: #d1fae5;
+      color: var(--success);
+      border: 1px solid #84e1bc;
+    }
+
+    .info-box {
+      background: linear-gradient(135deg, #f5f3ff, #ede9fe);
+      padding: 20px;
+      border-radius: 12px;
+      margin-bottom: 30px;
+      font-size: 15px;
+      border-left: 4px solid var(--primary);
+    }
+
+    .info-box ul {
+      padding-left: 20px;
+      margin-top: 10px;
+    }
+
+    .info-box li {
+      margin-bottom: 8px;
+    }
+
+    @media (max-width: 500px) {
+      .card {
+        padding: 30px 20px;
+      }
+
+      .logo-icon {
+        width: 60px;
+        height: 60px;
+        font-size: 26px;
+      }
+
+      h1 {
+        font-size: 24px;
+      }
+
+      .subtitle {
+        font-size: 16px;
+      }
+    }
+  </style>
+</head>
 <body>
-<h1>Создать чат</h1>
-<form id="createChatForm">
-  <input id="chatUserLogin" type="text" placeholder="Логин пользователя" required>
-  <button type="submit">Создать чат</button>
-</form>
-<div id="result"></div>
+<div class="container">
+  <div class="card">
+    <div class="header">
+      <button class="back-btn" onclick="window.location.href='/contacts.html'">
+        <i class="fas fa-arrow-left"></i>
+      </button>
+      <div class="logo-icon">
+        <i class="fas fa-comment-medical"></i>
+      </div>
+      <h1>Создать новый чат</h1>
+      <p class="subtitle">Начните общение с другим пользователем</p>
+    </div>
+
+    <div class="info-box">
+      <strong>Как это работает:</strong>
+      <ul>
+        <li>Введите логин пользователя, с которым хотите начать чат</li>
+        <li>Система проверит наличие пользователя</li>
+        <li>При успешном создании вы будете перенаправлены в чат</li>
+      </ul>
+    </div>
+
+    <form id="createChatForm">
+      <div class="form-group">
+        <label for="chatUserLogin">
+          <i class="fas fa-user"></i>Логин пользователя
+        </label>
+        <input
+                id="chatUserLogin"
+                type="text"
+                placeholder="Введите логин пользователя"
+                required
+                autocomplete="off"
+                autofocus
+        />
+      </div>
+
+      <button type="submit">
+        <i class="fas fa-plus-circle"></i> Создать чат
+      </button>
+    </form>
+
+    <div id="result"></div>
+  </div>
+</div>
 
 <script>
   const token = localStorage.getItem('token');
@@ -15,7 +325,12 @@
 
   document.getElementById('createChatForm').addEventListener('submit', async e => {
     e.preventDefault();
-    const login = e.target.chatUserLogin.value;
+    const login = document.getElementById('chatUserLogin').value.trim();
+    const resultDiv = document.getElementById('result');
+
+    // Очистка предыдущих сообщений
+    resultDiv.textContent = '';
+    resultDiv.className = '';
 
     try {
       const res = await fetch('/api/chats', {
@@ -26,11 +341,22 @@
         },
         body: JSON.stringify({ userLogin: login })
       });
-      if (!res.ok) throw new Error('Ошибка создания чата');
-      document.getElementById('result').textContent = 'Чат создан';
-      setTimeout(() => window.location.href = '/contacts.html', 1000);
+
+      if (!res.ok) {
+        const errorData = await res.json();
+        throw new Error(errorData.message || 'Ошибка создания чата');
+      }
+
+      resultDiv.textContent = 'Чат успешно создан! Перенаправляем...';
+      resultDiv.classList.add('success');
+
+      setTimeout(() => {
+        window.location.href = '/contacts.html';
+      }, 1500);
+
     } catch (err) {
-      document.getElementById('result').textContent = err.message;
+      resultDiv.textContent = err.message;
+      resultDiv.classList.add('error');
     }
   });
 </script>
