--- a/static/register.html
+++ b/static/register.html
@@ -1,17 +1,223 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" class="h-full">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Регистрация</title>
+  <style>
+    :root {
+      --primary: #4f46e5;
+      --primary-hover: #4338ca;
+      --error: #ef4444;
+      --success: #10b981;
+      --text: #1f2937;
+      --bg: #f9fafb;
+      --card: #ffffff;
+      --border: #e5e7eb;
+    }
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', system-ui, sans-serif;
+    }
+
+    body {
+      min-height: 100vh;
+      background: linear-gradient(135deg, #f0f9ff 0%, #e6f7ff 100%);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+      color: var(--text);
+      line-height: 1.5;
+    }
+
+    .container {
+      width: 100%;
+      max-width: 420px;
+    }
+
+    .card {
+      background: var(--card);
+      border-radius: 16px;
+      box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.1), 0 8px 10px -6px rgba(0, 0, 0, 0.05);
+      padding: 40px;
+      transition: all 0.3s ease;
+    }
+
+    .logo {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    .logo-icon {
+      display: inline-flex;
+      background: var(--primary);
+      color: white;
+      width: 56px;
+      height: 56px;
+      border-radius: 12px;
+      align-items: center;
+      justify-content: center;
+      font-size: 28px;
+      font-weight: bold;
+      margin-bottom: 16px;
+      box-shadow: 0 4px 6px -1px rgba(79, 70, 229, 0.2), 0 2px 4px -2px rgba(79, 70, 229, 0.2);
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 26px;
+      font-weight: 700;
+      margin-bottom: 8px;
+      color: #111827;
+    }
+
+    .subtitle {
+      text-align: center;
+      color: #6b7280;
+      margin-bottom: 30px;
+    }
+
+    .form-group {
+      margin-bottom: 20px;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 8px;
+      font-weight: 500;
+      color: #374151;
+    }
+
+    input {
+      width: 100%;
+      padding: 14px 16px;
+      border: 1px solid var(--border);
+      border-radius: 10px;
+      font-size: 16px;
+      transition: all 0.2s;
+      background-color: #f9fafb;
+    }
+
+    input:focus {
+      outline: none;
+      border-color: var(--primary);
+      box-shadow: 0 0 0 3px rgba(79, 70, 229, 0.15);
+      background-color: white;
+    }
+
+    input::placeholder {
+      color: #9ca3af;
+    }
+
+    button {
+      width: 100%;
+      padding: 14px;
+      background: var(--primary);
+      color: white;
+      border: none;
+      border-radius: 10px;
+      font-size: 16px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.2s;
+      margin-top: 8px;
+      box-shadow: 0 4px 6px -1px rgba(79, 70, 229, 0.3), 0 2px 4px -2px rgba(79, 70, 229, 0.3);
+    }
+
+    button:hover {
+      background: var(--primary-hover);
+      transform: translateY(-1px);
+      box-shadow: 0 10px 15px -3px rgba(79, 70, 229, 0.3), 0 4px 6px -4px rgba(79, 70, 229, 0.3);
+    }
+
+    button:active {
+      transform: translateY(0);
+    }
+
+    #registerResult {
+      min-height: 24px;
+      text-align: center;
+      margin-top: 20px;
+      font-weight: 500;
+      padding: 12px 16px;
+      border-radius: 8px;
+      transition: all 0.3s;
+    }
+
+    .error {
+      background-color: #fee2e2;
+      color: var(--error);
+    }
+
+    .success {
+      background-color: #d1fae5;
+      color: var(--success);
+    }
+
+    .login-link {
+      text-align: center;
+      margin-top: 24px;
+      color: #6b7280;
+    }
+
+    .login-link a {
+      color: var(--primary);
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .login-link a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-<h1>Регистрация</h1>
-<form id="registerForm">
-  <input id="login" type="text" placeholder="Логин" required />
-  <input id="password" type="password" placeholder="Пароль" required />
-  <button type="submit">Зарегистрироваться</button>
-</form>
-<div id="registerResult"></div>
+<div class="container">
+  <div class="card">
+    <div class="logo">
+      <div class="logo-icon">R</div>
+      <h1>Регистрация</h1>
+      <p class="subtitle">Создайте новый аккаунт</p>
+    </div>
+
+    <form id="registerForm">
+      <div class="form-group">
+        <label for="login">Логин</label>
+        <input
+                id="login"
+                type="text"
+                placeholder="Введите ваш логин"
+                required
+                autocomplete="username"
+                autofocus
+        />
+      </div>
+
+      <div class="form-group">
+        <label for="password">Пароль</label>
+        <input
+                id="password"
+                type="password"
+                placeholder="Создайте пароль"
+                required
+                autocomplete="new-password"
+        />
+      </div>
+
+      <button type="submit">Зарегистрироваться</button>
+    </form>
+
+    <div id="registerResult"></div>
+
+    <div class="login-link">
+      Уже есть аккаунт? <a href="/login.html">Войти</a>
+    </div>
+  </div>
+</div>
 
 <script>
   document.getElementById('registerForm').addEventListener('submit', async function(e) {
@@ -20,6 +226,11 @@
     const login = document.getElementById('login').value;
     const password = document.getElementById('password').value;
     const role = 'user';
+    const resultDiv = document.getElementById('registerResult');
+
+    // Очистка предыдущих сообщений
+    resultDiv.textContent = '';
+    resultDiv.className = '';
 
     try {
       const response = await fetch('/api/users', {
@@ -29,15 +240,19 @@
       });
 
       if (!response.ok) {
-        throw new Error('Ошибка регистрации');
+        const errorData = await response.json();
+        throw new Error(errorData.message || 'Ошибка регистрации');
       }
 
-      document.getElementById('registerResult').textContent = 'Регистрация прошла успешно!';
+      resultDiv.textContent = 'Регистрация прошла успешно! Перенаправляем...';
+      resultDiv.classList.add('success');
 
-      // Можно перенаправить на страницу входа
-      window.location.href = '/login.html';
+      setTimeout(() => {
+        window.location.href = '/login.html';
+      }, 1500);
     } catch (err) {
-      document.getElementById('registerResult').textContent = err.message;
+      resultDiv.textContent = err.message;
+      resultDiv.classList.add('error');
     }
   });
 </script>
